/*
 * Copyright (c) 2013-2023 the original author or authors.
 *
 * MIT License
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */
package eapli.ecourse.infrastructure.persistence;

import java.lang.reflect.InvocationTargetException;

import org.apache.logging.log4j.LogManager;
import org.apache.logging.log4j.Logger;

import eapli.ecourse.Application;
import eapli.framework.util.Utility;

/**
 * Provides easy access to the persistence layer. Works as a factory of
 * factories.
 */
@Utility
public final class PersistenceContext {
	private static final Logger LOGGER = LogManager.getLogger(PersistenceContext.class);
	private static RepositoryFactory theFactory;

	private PersistenceContext() {
		// ensure utility
	}

	/**
	 * Returns the abstract repository factory configured in the application
	 * settings
	 *
	 * @return the repository factory
	 */
	public static RepositoryFactory repositories() {
		if (theFactory == null) {
			final String factoryClassName = Application.settings().repositoryFactory();
			try {
				theFactory = (RepositoryFactory) Class.forName(factoryClassName).getDeclaredConstructor().newInstance();
			} catch (ClassNotFoundException | IllegalAccessException | InstantiationException | IllegalArgumentException
					| InvocationTargetException | NoSuchMethodException | SecurityException ex) {
				LOGGER.error("Unable to dynamically load the Repository Factory", ex);
				throw new IllegalStateException(
						"Unable to dynamically load the Repository Factory: " + factoryClassName, ex);
			}
		}
		return theFactory;
	}
}
